<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollViewLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contents_main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/left_margin_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.04"
                    app:layout_constraintTop_toTopOf="@+id/center_layout" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/right_margin_guide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.96"
                    app:layout_constraintTop_toTopOf="@+id/center_layout" />

                <View
                    android:id="@+id/blank_top"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/page_title_layout"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    app:layout_constraintBottom_toTopOf="@+id/random_image_layout"
                    app:layout_constraintEnd_toEndOf="@id/right_margin_guide"
                    app:layout_constraintStart_toStartOf="@id/left_margin_guide"
                    app:layout_constraintTop_toBottomOf="@id/blank_top">

                    <TextView
                        android:id="@+id/townNameTopPage"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="8dp"
                        android:layout_marginTop="28dp"
                        android:fontFamily="Roboto"
                        android:gravity="center_vertical"
                        android:text="@string/美原町"
                        android:textColor="@color/orange"
                        android:textSize="24dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/kairanban"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/kairanban"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="8dp"
                        android:layout_toEndOf="@+id/townNameTopPage"
                        android:fontFamily="Roboto"
                        android:gravity="center_vertical"
                        android:text="@string/の回覧板"
                        android:textColor="@color/black"
                        android:textSize="24dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/townNameTopPage"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/seeTownButton"
                        android:layout_width="126dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_template"
                        android:fontFamily="@font/roboto"
                        android:text="@string/町を選ぶ"
                        android:textSize="16dp"
                        app:backgroundTint="@null"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/random_image_layout"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    app:layout_constraintBottom_toTopOf="@+id/center_layout"
                    app:layout_constraintTop_toBottomOf="@id/page_title_layout">

                    <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/flipper"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:inAnimation="@anim/right_in"
                        android:orientation="vertical"
                        android:outAnimation="@anim/left_out"
                        app:layout_constraintBottom_toTopOf="@+id/random_image_location"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/firstView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <include
                                android:id="@+id/random_image_include1"
                                layout="@layout/random_image_view" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/secondView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <include
                                android:id="@+id/random_image_include2"
                                layout="@layout/random_image_view" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/thirdView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <include
                                android:id="@+id/random_image_include3"
                                layout="@layout/random_image_view" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/fourthView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <include
                                android:id="@+id/random_image_include4"
                                layout="@layout/random_image_view" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/fifthView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <include
                                android:id="@+id/random_image_include5"
                                layout="@layout/random_image_view" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </ViewFlipper>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/random_image_location"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="parent">

                        <ImageView
                            android:id="@+id/point1"
                            android:layout_width="8dp"
                            android:layout_height="8dp"
                            android:src="@drawable/circle_random_image"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/point2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/point2"
                            android:layout_width="8dp"
                            android:layout_height="8dp"
                            android:src="@drawable/circle_random_image"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/point3"
                            app:layout_constraintStart_toEndOf="@id/point1"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/point3"
                            android:layout_width="8dp"
                            android:layout_height="8dp"
                            android:src="@drawable/circle_random_image"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/point4"
                            app:layout_constraintStart_toEndOf="@id/point2"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/point4"
                            android:layout_width="8dp"
                            android:layout_height="8dp"
                            android:src="@drawable/circle_random_image"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/point5"
                            app:layout_constraintStart_toEndOf="@id/point3"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/point5"
                            android:layout_width="8dp"
                            android:layout_height="8dp"
                            android:src="@drawable/circle_random_image"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/point4"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/center_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/right_margin_guide"
                    app:layout_constraintStart_toEndOf="@id/left_margin_guide"
                    app:layout_constraintTop_toBottomOf="@id/random_image_layout">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/recommend_frame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent">

                        <include
                            android:id="@+id/recommend_layout"
                            layout="@layout/toppage_genre_layout" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/genre1_frame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/recommend_frame">

                        <include
                            android:id="@+id/genre1_layout"
                            layout="@layout/toppage_genre_layout" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/genre2_frame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/genre1_frame">

                        <include
                            android:id="@+id/genre2_layout"
                            layout="@layout/toppage_genre_layout" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/genre3_frame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/genre2_frame">

                        <include
                            android:id="@+id/genre3_layout"
                            layout="@layout/toppage_genre_layout" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/blank_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/center_layout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
